--- a/index.html
+++ b/index.html
@@ -21,8 +21,9 @@
     <div class="Con-Emergente">
         <div id="resultado" class="cua">
             <p id="res">
-                Hola, antes de iniciar, solo quiero recordarte que eres 
-                muy especial para mí y gracias por todo. &lt;3
+                Hola, antes de iniciar, solo quiero recordarte que te amo 
+                mucho &hearts; y eres muy especial para mí gracias por cada momento 
+                compartido y los que vienen.&hearts; &hearts; &lt;3
             </p>    
             <button id="BotonCerrar" class="Button">Cerrar</button>
         </div>
@@ -40,7 +41,7 @@
         <canvas id="Flor" class="Flor" width="800" height="600"></canvas>
 
         <div class="Texto">
-            <h2 id="Text">Para la niña mas Linda del Mundo.</h2>
+            <h2 id="Text">Para la muñequita mas Linda del Mundo.</h2>
         </div>
 
     </main>
